Update ST Dropout subroutine
No longer needs st_scan bash script and works more efficiently.

--- a/mf.conf
+++ b/mf.conf
@@ -86,20 +86,21 @@ exten => _X.,1,Answer ; ANSWER internal trunk
 
 [mfrecv_st]
 exten => _X.,1,Answer ; ANSWER internal trunk
-	same => n,Set(ENV(${EXTEN}_SIGD)=false) ; SIG is not DONE
-	same => n(loop),NoOp(START ST SCAN)
-	same => n,MixMonitor(/tmp/${EXTEN}-st.wav)
-	same => n,Wait(2) 
-	same => n,StopMixMonitor
-	same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf /tmp/${EXTEN}-st.wav)})
-	same => n,Set(GLOBAL(${EXTEN}_decode_st)=${register_output})
-	same => n,Set(dropout_eval=${SHELL(/etc/asterisk/detect/st_scan ${register_output})})
-	same => n,NoOp(DECODE FRAME = RAW: ${register_output} | ST_COMP: ${dropout_eval})
-	same => n,GotoIf($["${dropout_eval}" = "true"]?dropout:loop)
-	same => n,Hangup
-	same => n(dropout),NoOP(START PULSE DETECTED)
-	same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
-	same => n,Hangup
+        same => n,Set(ENV(${EXTEN}_SIGD)=false) ; SIG is not DONE
+        same => n(loop),NoOp(START ST SCAN)
+        same => n,MixMonitor(/tmp/${EXTEN}-st.wav)
+        same => n,Wait(0.2) ; ST Tone scanning. You may need to experiment with this value. 200ms works fine in my testing.
+        same => n,StopMixMonitor
+        same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf /tmp/${EXTEN}-st.wav)})
+        same => n,Set(GLOBAL(${EXTEN}_decode_st)=${register_output})
+        same => n,Set(ST=#) ; ST Tone
+        same => n,ExecIf($[${REGEX("${ST}" ${register_output})} = 1]?GoTo(dropout):GoTo(loop))
+        same => n,NoOp(DECODE FRAME = RAW: ${register_output} | ST_COMP: ${dropout_eval})
+        same => n,GotoIf($["${dropout_eval}" = "true"]?dropout:loop)
+        same => n,Hangup
+        same => n(dropout),NoOP(START PULSE DETECTED)
+        same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
+        same => n,Hangup
 
 [sender]
 exten => _X.,1,Answer ; ANSWER internal trunk
