--- a/mf.conf
+++ b/mf.conf
@@ -89,7 +89,7 @@ exten => _X.,1,Answer ; ANSWER internal trunk
         same => n,Set(ENV(${EXTEN}_SIGD)=false) ; SIG is not DONE
         same => n(loop),NoOp(START ST SCAN)
         same => n,MixMonitor(/tmp/${EXTEN}-st.wav)
-        same => n,Wait(0.2) ; ST Tone scanning. You may need to experiment with this value. 200ms works fine in my testing.
+        same => n,Wait(2.0) ; ST Tone scanning. You may need to experiment with this value. 2 seconds works fine in my testing.
         same => n,StopMixMonitor
         same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf /tmp/${EXTEN}-st.wav)})
         same => n,Set(GLOBAL(${EXTEN}_decode_st)=${register_output})
