--- a/mf.conf
+++ b/mf.conf
@@ -62,7 +62,9 @@ exten => s,1,Progress
 [trunk_drop]
 exten => s,1,NoOp(TRUNK RESET)
 	same => n,System(/usr/sbin/asterisk -rx "confbridge kick ${UNIQUEID} all")
-
+        same => n,System(rm -rf /tmp/${UNIQUEID}-st.wav)
+        same => n,System(rm -rf /tmp/${UNIQUEID}-full.wav)
+	
 [trunk_access]
 exten => _X.,1,Answer ; ANSWER internal trunk
 	same => n,Confbridge(${EXTEN},mf_bridge,mf_user)
