--- a/mf.conf
+++ b/mf.conf
@@ -74,7 +74,7 @@ exten => s,1,Progress
 	; LOCAL TC
 	same => n(trunk_connect_local),NoOp(AstMF Trunk Connect)
 	same => n,Set(VOLUME(TX)=-1)
-	same => n,Confbridge({UNIQUEID},mf_bridge,mf_user)
+	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Set(VOLUME(TX)=2)
 	same => n,Set(number=${GLOBAL(${UNIQUEID}_decode)})
 	same => n,GoTo(main,${number},1)
