More typo fixes

--- a/mf.conf
+++ b/mf.conf
@@ -49,9 +49,9 @@ exten => s,1,Progress
 	same => n(tw),Wait(${tbott}) ;Time Based On Trunk Type 0.02 for local 1-1.5? for farend change to be dynamic in future as well
 	; Forward Audio Mute
 	same => n,System(echo sleep 0.2 >> /tmp/fam_${UNIQUEID}.sh)
-	same => n,System(echo 'asterisk -rx "confbridge mute ch${UNIQUEID} ${CHANNEL}"' >> /tmp/fam_${UNIQUEID}.sh)
+	same => n,System(echo 'asterisk -rx "confbridge mute ${UNIQUEID} ${CHANNEL}"' >> /tmp/fam_${UNIQUEID}.sh)
 	same => n,System(echo sleep 6 >> /tmp/fam_${UNIQUEID}.sh)
-	same => n,System(echo 'asterisk -rx "confbridge unmute ch${UNIQUEID} ${CHANNEL}"' >> /tmp/fam_${UNIQUEID}.sh)
+	same => n,System(echo 'asterisk -rx "confbridge unmute ${UNIQUEID} ${CHANNEL}"' >> /tmp/fam_${UNIQUEID}.sh)
 	; FAM Eval Start
 	same => n,GotoIf($[${fam_opt}=0]?fam:sender)
 	; FAM Eval End
