--- a/mf.conf
+++ b/mf.conf
@@ -3,7 +3,23 @@
 ; - MF Sender by Naveen Albert and Brian Clancy
 ; - Thanks to Phiber Optic and Donald Froula for support and inspiration.
 ; - DSP by Asterisk
-; - NPSTN.US 2020
+; - NPSTN.US 2021
+
+[globals](+)
+MFX = "!0/500" ; silence
+MF1 = "!700+900/50|!0/50"
+MF2 = "!700+1100/50|!0/50"
+MF3 = "!900+1100/50|!0/50"
+MF4 = "!700+1300/50|!0/50"
+MF5 = "!900+1300/50|!0/50"
+MF6 = "!1100+1300/50|!0/50"
+MF7 = "!700+1500/50|!0/50"
+MF8 = "!900+1500/50|!0/50"
+MF9 = "!1100+1500/50|!0/50"
+MF0 = "!1300+1500/50|!0/50"
+MFKP = "!1100+1700/100|!0/50"
+MFST = "!1500+1700/35|!0/50"
+DIGITSEP = "|"
 
 [mfmain] ; ARG1=RegisterOPT ARG2=SenderOPT ARG3=FamOPT ARG4=SenderNumber
 exten => s,1,Progress
@@ -158,19 +174,3 @@ exten => start,1,Set(number=${ARG1}) ; ARG1 = digits to MF
         same => n,Wait($[${toneduration}/1000])
         same => n,StopPlaytones()
         same => n,Return
-
-[globals]
-MFX = "!0/500" ; silence
-MF1 = "!700+900/50|!0/50"
-MF2 = "!700+1100/50|!0/50"
-MF3 = "!900+1100/50|!0/50"
-MF4 = "!700+1300/50|!0/50"
-MF5 = "!900+1300/50|!0/50"
-MF6 = "!1100+1300/50|!0/50"
-MF7 = "!700+1500/50|!0/50"
-MF8 = "!900+1500/50|!0/50"
-MF9 = "!1100+1500/50|!0/50"
-MF0 = "!1300+1500/50|!0/50"
-MFKP = "!1100+1700/100|!0/50"
-MFST = "!1500+1700/35|!0/50"
-DIGITSEP = "|"
