--- a/mf.conf
+++ b/mf.conf
@@ -21,7 +21,7 @@ MFKP = "!1100+1700/100|!0/50"
 MFST = "!1500+1700/35|!0/50"
 DIGITSEP = "|"
 
-[mfmain] ; ARG1=RegisterOPT ARG2=SenderOPT ARG3=FamOPT ARG4=SenderNumber
+[mfmain] ; ARG1=RegisterOPT ARG2=SenderOPT ARG3=FamOPT ARG4=SenderNumber ARG5=SendContext
 exten => s,1,Progress
 	; Trunk Drop Prep
 	same => n,Set(CHANNEL(hangup_handler_push)=trunk_drop,s,1)
@@ -93,7 +93,7 @@ exten => s,1,Progress
 	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Set(VOLUME(TX)=2)
 	same => n,Set(number=${GLOBAL(${UNIQUEID}_decode)})
-	same => n,GoTo(main,${number},1)
+	same => n,GoTo(${arg5},${number},1)
 	same => n,Hangup
 	; FAREND TC
 	same => n(trunk_connect_farend),NoOp(AstMF Trunk Connect)
