--- a/mf.conf
+++ b/mf.conf
@@ -5,7 +5,7 @@
 ; - DSP by Asterisk
 ; - NPSTN.US 2021
 
-[globals](+)
+[globals]
 MFX = "!0/500" ; silence
 MF1 = "!700+900/50|!0/50"
 MF2 = "!700+1100/50|!0/50"
