--- a/mf.conf
+++ b/mf.conf
@@ -93,7 +93,7 @@ exten => s,1,Progress
 	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Set(VOLUME(TX)=2)
 	same => n,Set(number=${GLOBAL(${UNIQUEID}_decode)})
-	same => n,GoTo(${arg5},${number},1)
+	same => n,GoTo(${ARG5},${number},1)
 	same => n,Hangup
 	; FAREND TC
 	same => n(trunk_connect_farend),NoOp(AstMF Trunk Connect)
