--- a/mf.conf
+++ b/mf.conf
@@ -5,21 +5,30 @@
 ; - DSP by Asterisk
 ; - NPSTN.US 2021
 
-[globals]
-MFX = "!0/500" ; silence
-MF1 = "!700+900/50|!0/50"
-MF2 = "!700+1100/50|!0/50"
-MF3 = "!900+1100/50|!0/50"
-MF4 = "!700+1300/50|!0/50"
-MF5 = "!900+1300/50|!0/50"
-MF6 = "!1100+1300/50|!0/50"
-MF7 = "!700+1500/50|!0/50"
-MF8 = "!900+1500/50|!0/50"
-MF9 = "!1100+1500/50|!0/50"
-MF0 = "!1300+1500/50|!0/50"
-MFKP = "!1100+1700/100|!0/50"
-MFST = "!1500+1700/35|!0/50"
-DIGITSEP = "|"
+[signallookup] ; NPSTN 20210208 NA ; Bell System specs say 1st 50 should be 55? / MFX - silence / ST - Don has 35 here set to 50
+exten => MF,1,Return("|","!0/${ARG3}","!700+900/${ARG1}|!0/${ARG2}","!700+1100/${ARG1}|!0/${ARG2}","!900+1100/${ARG1}|!0/${ARG2}","!700+1300/${ARG1}|!0/${ARG2}","!900+1300/${ARG1}|!0/${ARG2}","!1100+1300/${ARG1}|!0/${ARG2}","!700+1500/${ARG1}|!0/${ARG2}","!900+1500/${ARG1}|!0/${ARG2}","!1100+1500/${ARG1}|!0/${ARG2}","!1300+1500/${ARG1}|!0/${ARG2}","!1100+1700/100|!0/${ARG2}","!1500+1700/${ARG4}|!0/${ARG2}","!1300+1700/100|!0/${ARG2}","!900+1700/${ARG4}|!0/${ARG2}","!700+1700/${ARG4}|!0/${ARG2}")
+exten => SF,1,Return("|",200,100,"!0/200","!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}","!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}|!${ARG1}/${ARG2}|!0/${ARG3}") ; ARG1 = frequency (2600), ARG2 = on (60ms), ARG3 = off (40ms) / SFX = interdigit silence
+
+[mfer] ; NPSTN 20181212 NA/BJC, revised 20210208
+exten => start,1,Set(number=${FILTER(0-9,${ARG1})}) ; ARG1 = digits to MF
+	same => n,Gosub(signallookup,MF,1(50,50,500,35)) ; ARG1 = on, ARG2=off, ARG3=silence, ST duration
+	same => n,Set(ARRAY(digitsep,mfx,mf1,mf2,mf3,mf4,mf5,mf6,mf7,mf8,mf9,mf0,mfkp,mfst,mfkp2,mfst2,mfst3)=${GOSUB_RETVAL}) 
+	same => n,Set(c=0)
+	same => n,Set(numdigits=${LEN(${ARG1})})
+	same => n,Set(tonestring=${mfx}${digitsep}${mfkp}${digitsep})
+	same => n,While($[${c}<${numdigits}])
+	same => n,Set(mfnext=${mf${number:${c}:1}})
+	same => n,Set(tonestring=${tonestring}${mfnext}${digitsep})
+	same => n,Set(c=${INC(c)})
+	same => n,EndWhile
+	same => n,Set(mfnext=${mfst})
+	same => n,Set(tonestring=${tonestring}${mfnext}${digitsep})
+	same => n,Set(tonestring=${tonestring}${mfx})
+	same => n,Set(toneduration=$[100*${LEN(${ARG1})}+1785])
+	same => n,PlayTones(${FILTER(0-9\x21/|+,${tonestring})})
+	same => n,Wait($[${toneduration}/1000])
+	same => n,StopPlayTones()
+	same => n,Return()
 
 [mfmain] ; ARG1=RegisterOPT ARG2=SenderOPT ARG3=FamOPT ARG4=SenderNumber ARG5=SendContext
 exten => s,1,Progress
@@ -155,22 +164,3 @@ exten => _X.,1,Answer ; ANSWER internal trunk
 exten => _X.,1,Answer ; ANSWER internal trunk
 	same => n,GoSub(mfer,start,1(${EXTEN}))
 	same => n,Hangup
-
-[mfer] ; NPSTN 20181212 NA/BJC
-exten => start,1,Set(number=${ARG1}) ; ARG1 = digits to MF
-        same => n,Set(c=0)
-        same => n,Set(numdigits=${LEN(${ARG1})})
-        same => n,Set(tonestring=${MFX}${DIGITSEP}${MFKP}${DIGITSEP})
-        same => n,While($[${c}<${numdigits}])
-        same => n,Set(MFnext=${MF${number:${c}:1}})
-        same => n,Set(tonestring=${tonestring}${MFnext}${DIGITSEP})
-        same => n,Set(c=${INC(c)})
-        same => n,EndWhile
-        same => n,Set(MFnext=${MFST})
-        same => n,Set(tonestring=${tonestring}${MFnext}${DIGITSEP})
-        same => n,Set(tonestring=${tonestring}${MFX})
-        same => n,Set(toneduration=$[100*${LEN(${ARG1})}+1785])
-        same => n,Playtones(${FILTER(0-9\x21/|+,${tonestring})})
-        same => n,Wait($[${toneduration}/1000])
-        same => n,StopPlaytones()
-        same => n,Return
