Timeout and debug output

--- a/mf.conf
+++ b/mf.conf
@@ -80,14 +80,14 @@ exten => s,1,Progress
 	; FAM Eval Start
 	same => n,GotoIf($[${fam_opt}=0]?fam:sender)
 	; FAM Eval End
-	same => n(fam),NoOp(AstMF FAM Execute)
+	same => n(fam),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} FAM_EXEC!)
 	same => n,System(chmod a+x /tmp/fam_${UNIQUEID}.sh)
 	same => n,System(/tmp/fam_${UNIQUEID}.sh &)
 	same => n,System(rm -rf /tmp/fam_${UNIQUEID}.sh)
 	; Sender Eval Start
 	same => n(sender),GotoIf($[${sender_opt}=0]?sender_exec:register_eval)
 	; MF Sender
-	same => n(sender_exec),NoOp(AstMF Sender Start)
+	same => n(sender_exec),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} Sender called!)
 	same => n,System(echo Channel: Local/${UNIQUEID}@trunk_access >> /tmp/cf${UNIQUEID}.tmp)
 	same => n,System(echo Context: sender >> /tmp/cf${UNIQUEID}.tmp)
 	same => n,System(echo Extension: ${sender_digits} >> /tmp/cf${UNIQUEID}.tmp)
@@ -97,7 +97,7 @@ exten => s,1,Progress
 	; Register Eval Start
 	same => n(register_eval),GotoIf($[${register_opt}=0]?trunk_connect_local:trunk_connect_farend)
 	; LOCAL TC
-	same => n(trunk_connect_local),NoOp(AstMF Trunk Connect)
+	same => n(trunk_connect_local),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} Local trunk connect!)
 	same => n,Set(VOLUME(TX)=-1)
 	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Set(VOLUME(TX)=2)
@@ -105,7 +105,7 @@ exten => s,1,Progress
 	same => n,GoTo(${ARG5},${number},1)
 	same => n,Hangup
 	; FAREND TC
-	same => n(trunk_connect_farend),NoOp(AstMF Trunk Connect)
+	same => n(trunk_connect_farend),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} Farend trunk connect!)
 	same => n,Answer ; For now.
 	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Hangup
@@ -116,7 +116,7 @@ exten => 22,1,Dial(IAX2/npstn@scpa01.ddns.net/5312600)
 	same => n,Hangup
 
 [trunk_drop]
-exten => s,1,NoOp(TRUNK RESET)
+exten => s,1,Verbose(AST_MF [TRUNK_DROP] UID=${EXTEN} Trunk reset!)
 	same => n,System(/usr/sbin/asterisk -rx "confbridge kick ${UNIQUEID} all")
         same => n,System(rm -rf /tmp/${UNIQUEID}-st.wav)
         same => n,System(rm -rf /tmp/${UNIQUEID}-full.wav)
@@ -124,18 +124,19 @@ exten => s,1,NoOp(TRUNK RESET)
 	
 [trunk_access]
 exten => _X.,1,Answer ; ANSWER internal trunk
+	same => n,Verbose(AST_MF [TRUNK_ACCESS] UID=${EXTEN} Trunk accessed!)
 	same => n,Confbridge(${EXTEN},mf_bridge,mf_user)
 	same => n,Hangup
 
 [mfrecv_full]
 exten => _X.,1,Answer ; ANSWER internal trunk
 	same => n,MixMonitor(/tmp/${EXTEN}-full.wav)
-	same => n(loop),NoOp(START DROPOUT SCAN)
+	same => n(loop),Verbose(AST_MF [MFRECV_FULL] UID=${EXTEN} Drop out scan started!)
 	same => n,Wait(0.5) ; 0.5s
 	same => n,Set(SIGD=${ENV(${EXTEN}_SIGD)})
 	same => n,GotoIf($["${SIGD}" = "true"]?dropout:loop)
 	same => n,Hangup
-	same => n(dropout),NoOp(START DROPOUT DETECTED)
+	same => n(dropout),Verbose(AST_MF [MFRECV_FULL] UID=${EXTEN} Drop out detected!)
 	same => n,StopMixMonitor
 	same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf2 /tmp/${EXTEN}-full.wav)})
 	same => n,Set(GLOBAL(${EXTEN}_decode)=${register_output})
@@ -145,22 +146,33 @@ exten => _X.,1,Answer ; ANSWER internal trunk
 [mfrecv_st]
 exten => _X.,1,Answer ; ANSWER internal trunk
         same => n,Set(ENV(${EXTEN}_SIGD)=false) ; SIG is not DONE
-        same => n(loop),NoOp(START ST SCAN)
+        same => n,Set(dst=0.5) ; Digit Scan Time
+        same => n,Set(timeout_step=0) ; Timeout Step
+	same => n,Set(timeout_step_pos=1) ; Timeout Pos Step
+        same => n,Set(timeout_drop=10) ; Timeout Seconds
+        same => n,Set(timeout_iter=$[${timeout_drop} / ${dst}]) ; Timeout Interations
+        same => n(loop),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan start!)
+        same => n,Set(timeout_step=$[${timeout_step} + ${timeout_step_pos}])
+        same => n,GotoIf($["${timeout_step}" = "${timeout_iter}"]?timeout)
         same => n,MixMonitor(/tmp/${EXTEN}-st.wav)
-        same => n,Wait(2.0) ; ST Tone scanning. You may need to experiment with this value. 2 seconds works fine in my testing.
+        same => n,Wait(${dst})
         same => n,StopMixMonitor
         same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf /tmp/${EXTEN}-st.wav)})
         same => n,Set(GLOBAL(${EXTEN}_decode_st)=${register_output})
         same => n,Set(ST=#) ; ST Tone
         same => n,ExecIf($[${REGEX("${ST}" ${register_output})} = 1]?GoTo(dropout):GoTo(loop))
-        same => n,NoOp(DECODE FRAME = RAW: ${register_output} | ST_COMP: ${dropout_eval})
+        same => n,Verbose(AST_MF [MFRECVST] UID=${EXTEN} DFRAW: ${register_output} DFST: ${dropout_eval} DST: ${dst} TS: ${timeout_step} TD: ${timeout_drop} TI: ${timeout_iter} PSTEP: ${timeout_step_pos})
         same => n,GotoIf($["${dropout_eval}" = "true"]?dropout:loop)
-        same => n,Hangup
-        same => n(dropout),NoOP(START PULSE DETECTED)
+        same => n(dropout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Dropout!)
         same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
+	same => n(timeout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan time out!)
+	same => n,PlayTones(congestion)
+	same => n,Wait(60)
+	same => n,StopPlayTones
         same => n,Hangup
 
 [sender]
 exten => _X.,1,Answer ; ANSWER internal trunk
+	same => n,Verbose(AST_MF [SENDER] START GEN: ${EXTEN})
 	same => n,GoSub(mfer,start,1(${EXTEN}))
 	same => n,Hangup
