--- a/mf.conf
+++ b/mf.conf
@@ -116,7 +116,7 @@ exten => 22,1,Dial(IAX2/npstn@scpa01.ddns.net/5312600)
 	same => n,Hangup
 
 [trunk_drop]
-exten => s,1,Verbose(AST_MF [TRUNK_DROP] UID=${EXTEN} Trunk reset!)
+exten => s,1,Verbose(AST_MF [TRUNK_DROP] UID=${UNIQUEID} Trunk reset!)
 	same => n,System(/usr/sbin/asterisk -rx "confbridge kick ${UNIQUEID} all")
         same => n,System(rm -rf /tmp/${UNIQUEID}-st.wav)
         same => n,System(rm -rf /tmp/${UNIQUEID}-full.wav)
@@ -151,8 +151,8 @@ exten => _X.,1,Answer ; ANSWER internal trunk
 	same => n,Set(timeout_step_pos=1) ; Timeout Pos Step
         same => n,Set(timeout_drop=10) ; Timeout Seconds
         same => n,Set(timeout_iter=$[${timeout_drop} / ${dst}]) ; Timeout Interations
-        same => n(loop),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan start!)
-        same => n,Set(timeout_step=$[${timeout_step} + ${timeout_step_pos}])
+	same => n,Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan start!)
+        same => n(loop),Set(timeout_step=$[${timeout_step} + ${timeout_step_pos}])
         same => n,GotoIf($["${timeout_step}" = "${timeout_iter}"]?timeout)
         same => n,MixMonitor(/tmp/${EXTEN}-st.wav)
         same => n,Wait(${dst})
@@ -165,6 +165,7 @@ exten => _X.,1,Answer ; ANSWER internal trunk
         same => n,GotoIf($["${dropout_eval}" = "true"]?dropout:loop)
         same => n(dropout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Dropout!)
         same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
+	same => n,Hangup
 	same => n(timeout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan time out!)
 	same => n,PlayTones(congestion)
 	same => n,Wait(60)
