--- a/mf.conf
+++ b/mf.conf
@@ -160,8 +160,8 @@ exten => _X.,1,Answer ; ANSWER internal trunk
         same => n,Set(register_output=${SHELL(/etc/asterisk/detect/mf /tmp/${EXTEN}-st.wav)})
         same => n,Set(GLOBAL(${EXTEN}_decode_st)=${register_output})
         same => n,Set(ST=#) ; ST Tone
+	same => n,Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} DFRAW: ${register_output} DFST: ${dropout_eval} DST: ${dst} TS: ${timeout_step} TD: ${timeout_drop} TI: ${timeout_iter} PSTEP: ${timeout_step_pos})
         same => n,ExecIf($[${REGEX("${ST}" ${register_output})} = 1]?GoTo(dropout):GoTo(loop))
-        same => n,Verbose(AST_MF [MFRECVST] UID=${EXTEN} DFRAW: ${register_output} DFST: ${dropout_eval} DST: ${dst} TS: ${timeout_step} TD: ${timeout_drop} TI: ${timeout_iter} PSTEP: ${timeout_step_pos})
         same => n,GotoIf($["${dropout_eval}" = "true"]?dropout:loop)
         same => n(dropout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Dropout!)
         same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
