timeout drop fix

--- a/mf.conf
+++ b/mf.conf
@@ -100,7 +100,12 @@ exten => s,1,Progress
 	same => n(trunk_connect_local),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} Local trunk connect!)
 	same => n,Confbridge(${UNIQUEID},mf_bridge,mf_user)
 	same => n,Set(number=${GLOBAL(${UNIQUEID}_decode)})
-	same => n,GoTo(${ARG5},${number},1)
+	same => n,GotoIf($[${number}=timeout]?timeout:cnt)
+	same => n(timeout),Playtones(congestion)
+	same => n,Wait(60)
+	same => n,StopPlayTones
+	same => n,Hangup
+	same => n(cnt),GoTo(${ARG5},${number},1)
 	same => n,Hangup
 	; FAREND TC
 	same => n(trunk_connect_farend),Verbose(AST_MF [MFMAIN] UID=${UNIQUEID} Farend trunk connect!)
@@ -132,7 +137,11 @@ exten => _X.,1,Answer ; ANSWER internal trunk
 	same => n(loop),Verbose(AST_MF [MFRECV_FULL] UID=${EXTEN} Drop out scan started!)
 	same => n,Wait(0.5) ; 0.5s
 	same => n,Set(SIGD=${ENV(${EXTEN}_SIGD)})
+	same => n,GotoIf($["${SIGD}" = "timeout"]?timeout)
 	same => n,GotoIf($["${SIGD}" = "true"]?dropout:loop)
+	same => n(timeout),Verbose(AST_MF [MFRECV_FULL] UID=${EXTEN} timeout detected!)
+	same => n,Set(GLOBAL(${EXTEN}_decode)=timeout)
+	same => n,System(/usr/sbin/asterisk -rx "confbridge kick ${EXTEN} all") ; WARNING this will disconnect all listeners.
 	same => n,Hangup
 	same => n(dropout),Verbose(AST_MF [MFRECV_FULL] UID=${EXTEN} Drop out detected!)
 	same => n,StopMixMonitor
@@ -164,10 +173,8 @@ exten => _X.,1,Answer ; ANSWER internal trunk
         same => n(dropout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Dropout!)
         same => n,Set(ENV(${EXTEN}_SIGD)=true) ; SIG is DONE (MON DROPOUT)
 	same => n,Hangup
-	same => n(timeout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan time out!)
-	same => n,PlayTones(congestion)
-	same => n,Wait(60)
-	same => n,StopPlayTones
+        same => n(timeout),Verbose(AST_MF [MFRECV_ST] UID=${EXTEN} Digit scan time out!)
+        same => n,Set(ENV(${EXTEN}_SIGD)=timeout) ; SIG is ERROR (MON DROPOUT)
         same => n,Hangup
 
 [sender]
