Clear FAM SH file on trunk_drop

--- a/mf.conf
+++ b/mf.conf
@@ -123,6 +123,7 @@ exten => s,1,Verbose(AST_MF [TRUNK_DROP] UID=${UNIQUEID} Trunk reset!)
 	same => n,System(/usr/sbin/asterisk -rx "confbridge kick ${UNIQUEID} all")
         same => n,System(rm -rf /tmp/${UNIQUEID}-st.wav)
         same => n,System(rm -rf /tmp/${UNIQUEID}-full.wav)
+	same => n,System(rm -rf /tmp/fam_${UNIQUEID}.sh)
 	same => n,Return()
 	
 [trunk_access]
